--- a/serverless.yml
+++ b/serverless.yml
@@ -16,7 +16,7 @@ custom:
 provider:
   name: aws
   runtime: nodejs8.10
-  stage: dev
+  stage: prod
   region: us-east-1
   environment: ${file(env.yml):${self:provider.stage}}
 
