--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "node-fetch": "^2.6.0",
+    "rss": "^1.2.2",
     "source-map-support": "^0.4.18"
   }
 }
