--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,8 @@ service: rss
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-domain-manager
+
 
 # serverless-webpack configuration
 # Enable auto-packing of external modules
@@ -12,6 +14,11 @@ custom:
   webpack:
     webpackConfig: ./webpack.config.js
     includeModules: true
+  customDomain:
+    domainName: ${file(env.yml):RSS_DOMAIN, env:RSS_DOMAIN }
+    basePath: ''
+    stage: ${self:provider.stage}
+    createRoute53Record: true
 
 provider:
   name: aws
