--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "serverless-domain-manager": "^3.2.2",
     "serverless-offline": "^3.25.6",
     "serverless-webpack": "^5.3.0",
     "webpack": "^4.16.2",
